--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@types/node": "12.7.7",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
+    "@types/react-router-dom": "^5.1.0",
+    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
     "typescript": "3.6.3"
   },
