--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
     "@types/react-router-dom": "^5.1.0",
+    "@types/react-table": "^6.8.5",
     "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
+    "react-table": "^6.10.3",
     "typescript": "3.6.3"
   },
   "scripts": {
