--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^5.1.0",
     "axios": "^0.19.0",
     "react": "^16.9.0",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
@@ -41,7 +42,7 @@
     "@typescript-eslint/parser": "^2.3.1",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-react-hooks": "^2.0.1",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "prettier": "^1.18.2"
   }
 }
