--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^2.1.2",
+    "@devexpress/dx-react-scheduler": "^2.1.2",
+    "@devexpress/dx-react-scheduler-material-ui": "^2.1.2",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.7",
     "@types/react": "16.9.3",
