--- a/.gitignore
+++ b/.gitignore
@@ -158,7 +158,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# Production config file
-/public/config/config.js
+# build directory
+build/
 
 # End of https://www.gitignore.io/api/react,macos,windows,pycharm+all
