--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typescript": "3.6.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true PORT=4443 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
