--- a/package.json
+++ b/package.json
@@ -3,27 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@devexpress/dx-react-core": "^2.1.2",
-    "@devexpress/dx-react-scheduler": "^2.1.2",
-    "@devexpress/dx-react-scheduler-material-ui": "^2.1.2",
-    "@material-ui/core": "^4.5.1",
-    "@material-ui/icons": "^4.5.1",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.7",
-    "@types/react": "16.9.3",
-    "@types/react-dom": "16.9.1",
-    "@types/react-router-dom": "^5.1.0",
-    "@types/react-select": "^3.0.6",
-    "@types/react-table": "^6.8.5",
-    "axios": "^0.19.0",
-    "react": "^16.9.0",
-    "react-cookie": "^4.0.1",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.1.1",
-    "react-scripts": "3.1.2",
-    "react-select": "^3.0.8",
-    "react-table": "^6.10.3",
-    "typescript": "3.6.3"
+    "@devexpress/dx-react-core": "*",
+    "@devexpress/dx-react-scheduler": "*",
+    "@devexpress/dx-react-scheduler-material-ui": "*",
+    "@material-ui/core": "*",
+    "@material-ui/icons": "*",
+    "@types/jest": "^26.0.0",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "*",
+    "@types/react-select": "*",
+    "@types/react-table": "^6.0.0",
+    "axios": "*",
+    "react": "*",
+    "react-cookie": "*",
+    "react-dom": "*",
+    "react-router-dom": "*",
+    "react-scripts": "*",
+    "react-select": "*",
+    "react-table": "^6.10.0",
+    "typescript": "*"
   },
   "scripts": {
     "start": "HTTPS=true PORT=4443 react-scripts start",
@@ -48,12 +46,11 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.3.1",
-    "@typescript-eslint/parser": "^2.3.1",
-    "eslint": "^6.4.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react-hooks": "^2.1.2",
-    "prettier": "^1.18.2"
+    "@types/node": "^14.0.13",
+    "@typescript-eslint/eslint-plugin": "*",
+    "@typescript-eslint/parser": "*",
+    "eslint-config-prettier": "*",
+    "eslint-plugin-react-hooks": "*",
+    "prettier": "*"
   }
 }
