Format everything in src/ using `prettier` by calling `yarn format`
Created a command in package.json such that formatting everything
can be done by simply running `yarn format`.

Reasoning for formatting everything in this single commit:
1. Making modifications to the source-code will be easier
   and it is easier to format everything on commit than to
   remember to format the changed source (and surrounding code).

2. Prettier can be used to ensure that everything is formatted
   correctly on merge, or using git-hooks.

Downsides of doing this:
1. Lots of "unnecessary" code changes
2. The project git history will be harder to reason about

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "debug": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "format": "prettier --write src",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
