Replace dialog with snackbar and implement fixes
This does the following:
1. Remove the use of the ActionDialog component and instead
   create and use a new AlertSnackbar component.

   This looks way better and gives a nice visual feedback
   to the user when an action is completed (success/failure).
   It's also used to display error messages.

2. Remove some console.log()'s that was useful during development

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@devexpress/dx-react-scheduler-material-ui": "*",
     "@material-ui/core": "*",
     "@material-ui/icons": "*",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@types/jest": "^26.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "*",
