Rewrite Timeslot view and create relevant components
This patch contains a complete rewrite of the timeslots
view. It heavily utilizes MaterialUI components instead of
home-made CSS.

It changes the UX but works in a more consistent way than
the previous implementation does. The code-style is similar
to that of ProfileView which I previously refactored.

--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "v1",
+    "@types/date-fns": "latest",
     "@devexpress/dx-react-core": "*",
     "@devexpress/dx-react-scheduler": "*",
     "@devexpress/dx-react-scheduler-material-ui": "*",
-    "@material-ui/core": "*",
+    "@material-ui/core": "latest",
     "@material-ui/icons": "*",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "latest",
     "@types/jest": "^26.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "*",
