--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "v1",
-    "@types/date-fns": "latest",
     "@devexpress/dx-react-core": "*",
     "@devexpress/dx-react-scheduler": "*",
     "@devexpress/dx-react-scheduler-material-ui": "*",
@@ -12,8 +11,10 @@
     "@material-ui/icons": "*",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "latest",
+    "@types/date-fns": "latest",
     "@types/jest": "^26.0.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-outside-click-handler": "^1.3.0",
     "@types/react-router-dom": "*",
     "@types/react-select": "*",
     "@types/react-table": "^6.0.0",
@@ -21,6 +22,7 @@
     "react": "*",
     "react-cookie": "*",
     "react-dom": "*",
+    "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "*",
     "react-scripts": "*",
     "react-select": "*",
