Redesign and reimplement header using MUI components and principles

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/icons": "*",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "latest",
+    "@types/classnames": "^2.2.11",
     "@types/date-fns": "latest",
     "@types/jest": "^26.0.0",
     "@types/react-dom": "^16.9.8",
@@ -19,6 +20,7 @@
     "@types/react-select": "*",
     "@types/react-table": "^6.0.0",
     "axios": "*",
+    "classnames": "^2.2.6",
     "cross-env": "^7.0.2",
     "react": "*",
     "react-cookie": "*",
