Make volume mount work on Windows
Because:
- The PWD environment variable is not available on Windows.
- Using . to represent the current working directory is perfectly
  acceptable, and works on Linux, Windows and macOS.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ${PWD}:/app:Z
+      - .:/app:Z
     user: ${UID}
     environment:
       - CI=true
