--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@types/react-router-dom": "*",
     "@types/react-select": "*",
     "@types/react-table": "^6.0.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/user-event": "^13.1.9",
     "axios": "*",
     "classnames": "^2.2.6",
     "cross-env": "^7.0.2",
@@ -64,6 +67,7 @@
     "eslint-config-prettier": "*",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react-hooks": "*",
-    "prettier": "*"
+    "prettier": "*",
+    "msw": "^0.29.0"
   }
 }
