--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
     "@types/node": "^14.0.13",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
