--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/node": "^14.0.13",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
+    "axios-mock-adapter": "^1.19.0",
     "eslint-config-prettier": "*",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react-hooks": "*",
