--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "debug": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src --ext .ts,.tsx,.js",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "format": "prettier --write src",
     "eject": "react-scripts eject"
   },
@@ -68,6 +68,7 @@
     "eslint-config-prettier": "*",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react-hooks": "*",
+    "jest-environment-jsdom-sixteen": "^2.0.0",
     "prettier": "*"
   }
 }
