--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test
+      - name: Run tests and generate coverage report
+        run: npm test -- --coverage
 
-      - name: Build
-        run: npm run build
+      - name: Upload coverage to Codecov
+        run: codecov/codecov-action@v1
+
+      #- name: Build
+      #  run: npm run build
