--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm test -- --coverage
 
       - name: Upload coverage to Codecov
-        run: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v1.5.2
 
       #- name: Build
       #  run: npm run build
