--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x] # Version 12.x and 16.x also?
+        node-version: [14.x]
 
     steps:
       - name: Checkout repository
@@ -24,6 +24,13 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install dependencies
         run: npm install
 
@@ -33,5 +40,5 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1.5.2
 
-      #- name: Build
-      #  run: npm run build
+      - name: Build
+        run: npm run build
