--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "@material-ui/icons": "*",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "latest",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.2",
     "@types/classnames": "^2.2.11",
     "@types/date-fns": "latest",
     "@types/jest": "^26.0.0",
@@ -19,21 +24,18 @@
     "@types/react-router-dom": "*",
     "@types/react-select": "*",
     "@types/react-table": "^6.0.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/user-event": "^13.1.9",
     "axios": "*",
     "classnames": "^2.2.6",
     "cross-env": "^7.0.2",
-    "react": "*",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
     "react-cookie": "*",
-    "react-dom": "*",
     "react-outside-click-handler": "^1.3.0",
-    "react-router-dom": "*",
     "react-scripts": "*",
     "react-select": "*",
     "react-table": "^6.10.0",
-    "typescript": "*"
+    "ts-node": "^10.0.0"
   },
   "scripts": {
     "start": "cross-env HTTPS=true PORT=4443 react-scripts start",
@@ -41,7 +43,7 @@
     "debug": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src --ext .ts,.tsx,.js",
-    "test": "react-scripts test",
+    "test": "jest",
     "format": "prettier --write src",
     "eject": "react-scripts eject"
   },
@@ -64,10 +66,11 @@
     "@types/node": "^14.0.13",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
-    "eslint-config-prettier": "*",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react-hooks": "*",
     "prettier": "*",
-    "msw": "^0.29.0"
+    "msw": "^0.29.0",
+    "axios-mock-adapter": "^1.19.0"
   }
 }
