--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "debug": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src --ext .ts,.tsx,.js",
-    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+    "test": "react-scripts test --silent --env=jest-environment-jsdom-sixteen",
     "format": "prettier --write src",
     "eject": "react-scripts eject"
   },
