--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,10 +1,6 @@
 name: Node.js CI
 
-on:
-  push:
-    branches: [ master, test/login ]
-  pull_request:
-    branches: [ master, test/login ]
+on: [push, pull_request]
 
 jobs:
   build:
