--- a/package.json
+++ b/package.json
@@ -4,38 +4,33 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "v1",
-    "@devexpress/dx-react-core": "*",
-    "@devexpress/dx-react-scheduler": "*",
-    "@devexpress/dx-react-scheduler-material-ui": "*",
+    "@devexpress/dx-react-core": "2.6.3",
+    "@devexpress/dx-react-scheduler": "2.6.3",
+    "@devexpress/dx-react-scheduler-material-ui": "2.6.3",
     "@material-ui/core": "latest",
-    "@material-ui/icons": "*",
+    "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "latest",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.1.9",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.2",
-    "@types/classnames": "^2.2.11",
+    "@types/classnames": "2.2.11",
     "@types/date-fns": "latest",
-    "@types/jest": "^26.0.0",
-    "@types/react-dom": "^16.9.8",
+    "@types/jest": "26.0.0",
+    "@types/react-dom": "16.9.8",
     "@types/react-outside-click-handler": "^1.3.0",
-    "@types/react-router-dom": "*",
-    "@types/react-select": "*",
-    "@types/react-table": "^6.0.0",
+    "@types/react-router-dom": "5.1.5",
+    "@types/react-select": "3.0.13",
+    "@types/react-table": "6.8.7",
     "axios": "*",
-    "classnames": "^2.2.6",
-    "cross-env": "^7.0.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-router-dom": "^5.2.0",
+    "classnames": "2.2.6",
+    "cross-env": "7.0.2",
+    "react": "16.13.1",
     "react-cookie": "*",
+    "react-dom": "16.13.1",
     "react-outside-click-handler": "^1.3.0",
-    "react-scripts": "*",
-    "react-select": "*",
+    "react-router-dom": "*",
+    "react-scripts": "3.4.1",
+    "react-select": "3.1.0",
     "react-table": "^6.10.0",
-    "ts-node": "^10.0.0"
+    "typescript": "3.9.5"
   },
   "scripts": {
     "start": "cross-env HTTPS=true PORT=4443 react-scripts start",
@@ -43,7 +38,7 @@
     "debug": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src --ext .ts,.tsx,.js",
-    "test": "jest",
+    "test": "react-scripts test --silent --env=jest-environment-jsdom-sixteen",
     "format": "prettier --write src",
     "eject": "react-scripts eject"
   },
@@ -63,13 +58,17 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^14.0.13",
-    "@typescript-eslint/eslint-plugin": "*",
-    "@typescript-eslint/parser": "*",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react-hooks": "*",
-    "prettier": "*",
-    "axios-mock-adapter": "^1.19.0"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
+    "@types/node": "14.0.13",
+    "@typescript-eslint/eslint-plugin": "2.34.0",
+    "@typescript-eslint/parser": "2.34.0",
+    "axios-mock-adapter": "^1.19.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react-hooks": "1.7.0",
+    "jest-environment-jsdom-sixteen": "^2.0.0",
+    "prettier": "2.0.5"
   }
 }
