--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/date-fns": "latest",
     "@types/jest": "26.0.0",
     "@types/react-dom": "16.9.8",
+    "@types/react-helmet": "^6.1.1",
     "@types/react-outside-click-handler": "^1.3.0",
     "@types/react-router-dom": "5.1.5",
     "@types/react-select": "3.0.13",
@@ -25,6 +26,7 @@
     "react": "16.13.1",
     "react-cookie": "*",
     "react-dom": "16.13.1",
+    "react-helmet": "^6.1.0",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "*",
     "react-scripts": "3.4.1",
