--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "*",
     "classnames": "2.2.6",
     "cross-env": "7.0.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-cookie": "*",
     "react-dom": "16.13.1",
