--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
     "axios-mock-adapter": "^1.19.0",
+    "connect-api-mocker": "^1.10.0",
     "eslint-config-prettier": "*",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react-hooks": "*",
+    "express": "^4.17.1",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "prettier": "*"
   }
