--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-react-hooks": "*",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "prettier": "*",
-    "semantic-release": "^17.4.4"
+    "semantic-release": "^17.4.4",
+    "@semantic-release/git": "^9.0.0"
   }
 }
