--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,3 +38,9 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Create a Release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
