--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Argus-frontend",
   "version": "1.0.3",
+  "apiVersion": "v1",
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "v1",
