Add cookie domain to environment vars and fetch it in config
Providing cookie domain in config is necessary for proper removal of dataporten-token. Dataporten-token is stored as subdomain and can not be removed unless frontend knows the domain name. This could be extracted from the url, but since cookie domain is provided in api settings (which theoretically can be set to a value that differs from the api url), frontend should not assume that cookie domain can be extracted from the url.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - REACT_APP_BACKEND_WS_URL=ws://localhost:8000/ws
       - REACT_APP_USE_SECURE_COOKIE=false
       - REACT_APP_DEBUG=true
+      - REACT_APP_COOKIE_DOMAIN=localhost
 
   api:
     build:
