--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "lint": "eslint src --ext .ts,.tsx,.js",
     "test": "react-scripts test --silent --env=jest-environment-jsdom-sixteen",
     "format": "prettier --write src",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "localdev": "HTTPS=false PORT=8080 REACT_APP_ENABLE_WEBSOCKETS_SUPPORT=true REACT_APP_USE_SECURE_COOKIE=false REACT_APP_DEBUG=true REACT_APP_BACKEND_WS_URL=ws://localhost:8000/ws REACT_APP_BACKEND_URL=http://localhost:8000 react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
