Comment on how user value should be selected
Using ${UID} causes problems on MacOS (where the mapping/privilege
issues don't apply anyway). However, it seems setting it to something
other than the image default of `node` might cause problems for the
latest node images from Dockerhub (npm just exits with code 243,
producing no output or logs to indicate what went wrong).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
       - "8080:8080"
     volumes:
       - .:/app:Z
+    # If npm refuses to start, you may need to use the `node` user instead of
+    # ${UID}. However, on Linux, the latter might cause issues with file
+    # permissions in the `/app` bind-mount.
     user: ${UID}
     environment:
       - CI=true
