Enable the SMS media plugin in docker-compose env
This introduces a custom settings file for the API backend service
container, so some of the more complex settings of the API server can be
manipulated while testing/developing the frontend.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - redis
     environment:
       - TIME_ZONE=Europe/Oslo
-      - DJANGO_SETTINGS_MODULE=argus.site.settings.dockerdev
+      - DJANGO_SETTINGS_MODULE=dockerdev
       - DATABASE_URL=postgresql://argus:HahF9araeKoo@postgres/argus
       - ARGUS_FRONTEND_URL=http://localhost:8080
       - ARGUS_REDIS_SERVER=redis
