--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,17 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "64x64 24x24",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "favicon32.ico",
+      "sizes": "32x32",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "favicon16.ico",
+      "sizes": "16x16",
       "type": "image/x-icon"
     },
     {
@@ -16,6 +26,11 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "apple-logo.png",
+      "type": "image/png",
+      "sizes": "any"
     }
   ],
   "start_url": ".",
