--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@material-ui/pickers": "latest",
     "@types/classnames": "2.2.11",
     "@types/date-fns": "latest",
-    "@types/jest": "26.0.0",
+    "@types/jest": "27.5.1",
     "@types/react-dom": "16.9.8",
     "@types/react-helmet": "^6.1.1",
     "@types/react-outside-click-handler": "^1.3.0",
@@ -30,7 +30,7 @@
     "react-helmet": "^6.1.0",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "*",
-    "react-scripts": "3.4.4",
+    "react-scripts": "5.0.1",
     "react-select": "3.1.0",
     "react-table": "^6.10.0",
     "typescript": "3.9.5"
@@ -40,8 +40,8 @@
     "dockerstart": "cross-env HTTPS=false PORT=8080 react-scripts start",
     "debug": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "eslint src --ext .ts,.tsx,.js",
-    "test": "react-scripts test --silent --env=jest-environment-jsdom-sixteen",
+    "lint": "eslint -c config.eslint.js src --ext .ts,.tsx,.js",
+    "test": "react-scripts test --silent --env=jsdom",
     "format": "prettier --write src",
     "eject": "react-scripts eject"
   },
@@ -71,7 +71,7 @@
     "eslint-config-prettier": "*",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react-hooks": "*",
-    "jest-environment-jsdom-sixteen": "^2.0.0",
+    "jest-environment-jsdom": "27.5.1",
     "prettier": "*"
   }
 }
