Rework production docker image for runtime config
This updates the docker production image to be a fully operational nginx
server which serves the statically built Argus front-end.  Now that
runtime configuration is supported, the updated image will produce a
runtime config file from the same environment variables that were
originally expected by the frontend build process, and ensure it's in
the correct location before starting nginx.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
-# This image installs all dependencies and "pre-builds" an Argus frontend
-# site, intended as a stepstone builder image for a full production site.
+# This image installs all dependencies and compiles the Argus frontend into a
+# set of static files that can be served by any webserver.
 # It should run with the git repo root as the build context
-FROM node:16-bullseye
+FROM node:16-bullseye AS build
 WORKDIR /app
 
 COPY . /app
@@ -10,7 +10,27 @@ RUN npm ci
 RUN npx browserslist@latest --update-db
 RUN npm run build
 
-ONBUILD RUN npm run build
+##########################################################
+# production environment consisting only of nginx and the statically compiled
+# Argus Frontend application files produced by the build stage
+# FROM: https://mherman.org/blog/dockerizing-a-react-app/
+FROM nginx:stable-alpine
 
-# When used as an intermediate builder image, the complete set of statically
-# built files to serve from the web server root can be copied from /app/build
+COPY --from=build /app/build /usr/share/nginx/html
+
+RUN apk add --update tini tree
+COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
+COPY docker/docker-entrypoint.sh /
+COPY docker/runtime-config-template.json /
+
+ENV REACT_APP_BACKEND_URL=http://fake
+ENV REACT_APP_ENABLE_WEBSOCKETS_SUPPORT=true
+ENV REACT_APP_BACKEND_WS_URL=ws://fake
+ENV REACT_APP_COOKIE_DOMAIN=fake
+ENV REACT_APP_USE_SECURE_COOKIE=false
+ENV REACT_APP_DEBUG=false
+ENV REACT_APP_DEFAULT_AUTO_REFRESH_INTERVAL=30
+ENV REACT_APP_REALTIME_SERVICE_MAX_RETRIES=5
+
+ENTRYPOINT ["/sbin/tini", "-v", "--"]
+CMD ["/docker-entrypoint.sh"]
