Fix failing tests with jest after bumping axios
Solution fetched from https://stackoverflow.com/a/74297004

--- a/package.json
+++ b/package.json
@@ -60,6 +60,11 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
+  },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
