--- a/docker/runtime-config-template.json
+++ b/docker/runtime-config-template.json
@@ -4,17 +4,14 @@
     "enableWebsocketSupport": ${REACT_APP_ENABLE_WEBSOCKETS_SUPPORT},
     "useSecureCookie": ${REACT_APP_USE_SECURE_COOKIE},
     "debug": ${REACT_APP_DEBUG},
-    "cookieDomain": "localhost",
-
+    "cookieDomain": "${REACT_APP_COOKIE_DOMAIN}",
     "defaultAutoRefreshInterval": ${REACT_APP_DEFAULT_AUTO_REFRESH_INTERVAL},
     "realtimeServiceMaxRetries": ${REACT_APP_REALTIME_SERVICE_MAX_RETRIES},
-
     "use24hTime": true,
     "timestampDateFormat": "yyyy-MM-dd",
     "timestampTimeFormat": "HH:mm:ss",
     "timestampTimeNoSeconds": "HH:mm",
     "timestampTimezoneOffsetFormat": "xxx",
     "timestampFormat": "{date} {time}{timezone_offset}",
-
     "showSeverityLevels": true
 }
