--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,10 @@
 name: Node.js CI
 
-on: [push, pull_request]
+on: 
+  push:
+  pull_request:
+  schedule: # Run daily at 08:00 CEST (06:00 UST)
+    - cron: '0 6 * * *'
 
 jobs:
   build:
